Update the database operations to incorporate all the file handling and mapping Create more generalized and template driven operations for each resource, consolidating code Cleanup io operations, so path and filenames are handled consistently
