# api/controllers/search.js
@@ -1,25 +1,26 @@
+const titleSearch = require('../../helpers/title_search');
 
-const titleSearch = require('../../database/title_search');
-
-const eidrMap = require('../../logs/eidrMap');
+const eidrMap = require('../../logs/uvFileMap');
 
 // Create mapping of a parent ID to a sibling that we have a record for
 const parentMap = {};
 const eidrKeys = Object.keys(eidrMap);
 eidrKeys.forEach((key) => {
-    parentMap[eidrMap[key].parentId] = key;
+    if (eidrMap[key].hasOwnProperty('parentEidr')) {
+        parentMap[eidrMap[key].parentEidr] = key;
+    }
 });
 
 async function sendResult(params) {
-    const {res, result} = params;
+    const { res, result } = params;
     try {
         res.status(200)
-            .type('application/json')
-            .send(JSON.stringify(result));
+           .type('application/json')
+           .send(JSON.stringify(result));
     } catch (err) {
         res.status(404)
-            .type('plain/text')
-            .send('Resource not found');
+           .type('plain/text')
+           .send('Resource not found');
     }
 }
 
@@ -32,7 +33,7 @@ async function startSearch(params) {
 
 
 function getSearch(req, res) {
-    const {database} = this.dependencies;
+    const { database } = this.dependencies;
     const params = {
         database,
         searchQuery: req.query.searchQuery,
